--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "security:scan": "node scripts/security-monitor.cjs",
+    "security:alert": "node scripts/security-alert.cjs"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
@@ -14,15 +16,23 @@
     "@supabase/supabase-js": "^2.45.0",
     "astro": "^5.15.3",
     "leaflet": "^1.9.4",
-    "sharp": "^0.33.0"
+    "sharp": "^0.33.0",
+    "stripe": "^15.11.0"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.5",
+    "@astrojs/compiler": "2.12.2",
     "@astrojs/rss": "^4.0.13",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.17",
+    "dotenv": "^17.2.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0"
+  },
+  "volta": {
+    "node": "20.18.0",
+    "npm": "10.9.0"
   }
 }
