Landing Mujeres que creen y .env.example de pagos/seguridad

--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,17 @@ TURNSTILE_SECRET_KEY=
 # Wompi (Colombia)
 WOMPI_PUBLIC_KEY=
 WOMPI_PRIVATE_KEY=
-WOMPI_EVENTS_SECRET=
+WOMPI_INTEGRITY_KEY=
+WOMPI_WEBHOOK_SECRET=
+WOMPI_CHECKOUT_URL=https://checkout-sandbox.wompi.co/p/
+WOMPI_ENV=sandbox
 
 # Stripe (internacional)
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
 
 # Base de datos / Supabase
 SUPABASE_URL=
