Add NOMINATIM_USER_AGENT to env example

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
+# Geocodificación (Nominatim / OSM)
+NOMINATIM_USER_AGENT=ministeriomana.org
+
 # Otros opcionales que uses en src/lib/*.ts
 # SECURITY_WEBHOOK_URL=
 # LOGTAIL_TOKEN=
