feat: Add Ayocin-style smooth scroll animations with Lenis and GSAP
- Add Lenis smooth scroll for physics-based scrolling
- Add GSAP ScrollTrigger for scroll-driven animations
- Implement Cosmic Design System (Deep Space palette)
- Create Hero, ChapterPinned, and Panorama components
- Add parallax effects, pinned sections, and fade-in animations
- Update BaseLayout to load animation scripts
- Respect prefers-reduced-motion accessibility setting

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^9.0.2",
+    "@studio-freight/lenis": "^1.0.42",
     "@supabase/supabase-js": "^2.45.0",
     "astro": "^5.15.3",
+    "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "sharp": "^0.33.0",
     "stripe": "^15.11.0"
