feat: base backend cumbre mundial 2026

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,16 @@ STRIPE_WEBHOOK_SECRET=
 STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
 
+# Cumbre Mundial 2026
+CUMBRE_REFERENCE_PREFIX=MM-EVT-CM26
+CUMBRE_EMAIL_FROM=info@ministeriomana.org
+
+# Webhook interno (forwarding Wompi desde otro servicio)
+INTERNAL_WEBHOOK_SECRET=
+
+# SendGrid (opcional para correos)
+SENDGRID_API_KEY=
+
 # Base de datos / Supabase
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
@@ -28,5 +38,6 @@ SUPABASE_SERVICE_ROLE_KEY=
 NOMINATIM_USER_AGENT=ministeriomana.org
 
 # Otros opcionales que uses en src/lib/*.ts
+# RESEND_API_KEY=
 # SECURITY_WEBHOOK_URL=
 # LOGTAIL_TOKEN=
