--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ STRIPE_CANCEL_URL=
 # Cumbre Mundial 2026
 CUMBRE_REFERENCE_PREFIX=MM-EVT-CM26
 CUMBRE_EMAIL_FROM=info@ministeriomana.org
+CUMBRE_CRON_SECRET=
+CUMBRE_EXPORT_SECRET=
 
 # Webhook interno (forwarding Wompi desde otro servicio)
 INTERNAL_WEBHOOK_SECRET=
@@ -33,6 +35,8 @@ SENDGRID_API_KEY=
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+PUBLIC_SUPABASE_URL=
+PUBLIC_SUPABASE_ANON_KEY=
 
 # Geocodificación (Nominatim / OSM)
 NOMINATIM_USER_AGENT=ministeriomana.org
