--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ CUMBRE_REFERENCE_PREFIX=MM-EVT-CM26
 CUMBRE_EMAIL_FROM=info@ministeriomana.org
 CUMBRE_CRON_SECRET=
 CUMBRE_EXPORT_SECRET=
+CUMBRE_INSTALLMENT_DEADLINE=2026-05-15
 
 # Webhook interno (forwarding Wompi desde otro servicio)
 INTERNAL_WEBHOOK_SECRET=
