feat(branding): integrate official Ministry and Cumbre SVG logos, update account section UI with final assets

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,12 @@ CUMBRE_EMAIL_FROM=info@ministeriomana.org
 CUMBRE_CRON_SECRET=
 CUMBRE_EXPORT_SECRET=
 CUMBRE_INSTALLMENT_DEADLINE=2026-05-15
+CUMBRE_ADMIN_EXPORT_SECRET=
+CUMBRE_MANUAL_SECRET=
+
+# Donaciones / Contabilidad
+DONATION_REFERENCE_PREFIX=DON
+DONATIONS_EXPORT_SECRET=
 
 # Webhook interno (forwarding Wompi desde otro servicio)
 INTERNAL_WEBHOOK_SECRET=
