--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,10 @@ CUMBRE_INSTALLMENT_DEADLINE=2026-05-15
 CUMBRE_ADMIN_EXPORT_SECRET=
 CUMBRE_MANUAL_SECRET=
 
+# Recordatorios (WhatsApp webhook opcional)
+WHATSAPP_WEBHOOK_URL=
+WHATSAPP_WEBHOOK_TOKEN=
+
 # Donaciones / Contabilidad
 DONATION_REFERENCE_PREFIX=DON
 DONATIONS_EXPORT_SECRET=
@@ -52,3 +56,6 @@ NOMINATIM_USER_AGENT=ministeriomana.org
 # RESEND_API_KEY=
 # SECURITY_WEBHOOK_URL=
 # LOGTAIL_TOKEN=
+# PUBLIC_CUMBRE_ONLY=false
+# PUBLIC_CUMBRE_WHATSAPP_ONLY=false
+# PUBLIC_SITE_URL=https://ministeriomana.org
