feat(cumbre): add payment test mode

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,9 @@ CUMBRE_EXPORT_SECRET=
 CUMBRE_INSTALLMENT_DEADLINE=2026-05-15
 CUMBRE_ADMIN_EXPORT_SECRET=
 CUMBRE_MANUAL_SECRET=
+# CUMBRE_TEST_MODE=true
+# CUMBRE_TEST_AMOUNT_COP=5000
+# CUMBRE_TEST_AMOUNT_USD=1
 
 # Recordatorios (WhatsApp webhook opcional)
 WHATSAPP_WEBHOOK_URL=
@@ -59,3 +62,6 @@ NOMINATIM_USER_AGENT=ministeriomana.org
 # PUBLIC_CUMBRE_ONLY=false
 # PUBLIC_CUMBRE_WHATSAPP_ONLY=false
 # PUBLIC_SITE_URL=https://ministeriomana.org
+# PUBLIC_CUMBRE_TEST_MODE=true
+# PUBLIC_CUMBRE_TEST_AMOUNT_COP=5000
+# PUBLIC_CUMBRE_TEST_AMOUNT_USD=1
