feat(portal): add base roles and churches schema

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,9 @@ SUPABASE_SERVICE_ROLE_KEY=
 PUBLIC_SUPABASE_URL=
 PUBLIC_SUPABASE_ANON_KEY=
 
+# Portal Iglesias / Roles
+PORTAL_SUPERADMIN_EMAILS=info@ministeriomana.org,santiquilva@gmail.com
+
 # Geocodificación (Nominatim / OSM)
 NOMINATIM_USER_AGENT=ministeriomana.org
 
