fix: commit missing files and config for portal and primicias redesign

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,17 @@ INTERNAL_WEBHOOK_SECRET=
 # SendGrid (opcional para correos)
 SENDGRID_API_KEY=
 
+# Clerk (Auth)
+PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=/portal
+PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/portal
+# PUBLIC_CLERK_DOMAIN=
+# PUBLIC_CLERK_PROXY_URL=
+# PUBLIC_CLERK_JS_URL=
+
 # Base de datos / Supabase
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
