fix: remove invalid Astro.resolve() calls and restore portal auth functionality
- Remove Astro.resolve() from portal/activar.astro, portal/ingresar.astro, portal/index.astro
- Remove Astro.resolve() from primicias/index.astro, BaseLayout.astro, AccountButton.astro
- Fix env.d.ts by removing invalid AstroGlobal declaration
- Add @scripts alias to tsconfig.json for script imports
- Restore inline scripts for portal authentication logic

Fixes 500 Internal Server Error on portal pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,24 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@layouts/*": ["src/layouts/*"],
-      "@data/*": ["src/data/*"],
-      "@i18n/*": ["src/i18n/*"],
-      "@lib/*": ["src/lib/*"]
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@layouts/*": [
+        "src/layouts/*"
+      ],
+      "@data/*": [
+        "src/data/*"
+      ],
+      "@i18n/*": [
+        "src/i18n/*"
+      ],
+      "@lib/*": [
+        "src/lib/*"
+      ],
+      "@scripts/*": [
+        "src/scripts/*"
+      ]
     }
   }
 }
